--- a/ch03_lib/BUILD
+++ b/ch03_lib/BUILD
@@ -5,3 +5,12 @@ cc_library(
         'get_num.c',
     ],
 )
+cc_binary(
+    name = 'test',
+    srcs = [
+        'get_num_test.c',
+    ],
+    deps = [
+        ':lib',
+    ]
+)
