--- a/ch05_File_IO_Further_Details/BUILD
+++ b/ch05_File_IO_Further_Details/BUILD
@@ -82,3 +82,15 @@ deps = [
     '//ch03_lib:lib'
 ],
 )
+cc_binary (
+name = 'test',
+srcs = [
+    'test.c',
+],
+incs = [
+    '../ch03_lib',
+],
+deps = [
+    '//ch03_lib:lib'
+],
+)
