--- a/ch06_Processes/BUILD
+++ b/ch06_Processes/BUILD
@@ -10,3 +10,27 @@ deps = [
     '//ch03_lib:lib'
 ],
 )
+cc_binary (
+name = 'necho',
+srcs = [
+    'necho.c',
+],
+incs = [
+    '../ch03_lib',
+],
+deps = [
+    '//ch03_lib:lib'
+],
+)
+cc_binary (
+name = 'display_env',
+srcs = [
+    'display_env.c',
+],
+incs = [
+    '../ch03_lib',
+],
+deps = [
+    '//ch03_lib:lib'
+],
+)
