--- a/ch06_Processes/BUILD
+++ b/ch06_Processes/BUILD
@@ -34,3 +34,51 @@ deps = [
     '//ch03_lib:lib'
 ],
 )
+cc_binary (
+name = 't_getenv',
+srcs = [
+    't_getenv.c',
+],
+incs = [
+    '../ch03_lib',
+],
+deps = [
+    '//ch03_lib:lib'
+],
+)
+cc_binary (
+name = 'modify_env',
+srcs = [
+    'modify_env.c',
+],
+incs = [
+    '../ch03_lib',
+],
+deps = [
+    '//ch03_lib:lib'
+],
+)
+cc_binary (
+name = 'longjmp',
+srcs = [
+    'longjmp.c',
+],
+incs = [
+    '../ch03_lib',
+],
+deps = [
+    '//ch03_lib:lib'
+],
+)
+cc_binary (
+name = 'setjmp_vars',
+srcs = [
+    'setjmp_vars.c',
+],
+incs = [
+    '../ch03_lib',
+],
+deps = [
+    '//ch03_lib:lib'
+],
+)
